[gd_scene load_steps=10 format=3 uid="uid://cpbv2g7t63csr"]

[ext_resource type="Theme" uid="uid://csalfsfxb4l4i" path="res://data/card_theme.tres" id="1_21ooo"]
[ext_resource type="Script" uid="uid://djquhjc3byljh" path="res://scripts/game/card_view_viejo.gd" id="2_820td"]
[ext_resource type="Texture2D" uid="uid://cwcspgxjqvn04" path="res://assets/cards/front.png" id="3_fwivs"]
[ext_resource type="Theme" uid="uid://dvb51r2kvkod0" path="res://data/Variant_themes.tres" id="4_wvxi0"]
[ext_resource type="Shader" uid="uid://xlrjtlyatv7" path="res://shaders/shader_platinadomuyblanco.gdshader" id="5_lgoki"]
[ext_resource type="Texture2D" uid="uid://bca5awjd07804" path="res://assets/cards/art/forest spider front.png" id="6_qg7qv"]
[ext_resource type="Texture2D" uid="uid://cyi802mk3xnbv" path="res://assets/cards/back.png" id="7_0cprg"]
[ext_resource type="Script" uid="uid://c3kl6cgmpigjq" path="res://scripts/UI/MotionTiltDriver.gd" id="8_y838j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nus5u"]
shader = ExtResource("5_lgoki")
shader_parameter/distortion_strength = 0.050000002375
shader_parameter/reflect_strength = 0.18000000855
shader_parameter/alpha_strength = 0.174000008265
shader_parameter/foil_dir = Vector2(0, 0)

[node name="CardView_viejo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1160.0
offset_bottom = -520.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_21ooo")
script = ExtResource("2_820td")

[node name="Front" type="Control" parent="."]
custom_minimum_size = Vector2(120, 200)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FrontFrame" type="TextureRect" parent="Front"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.9074554
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_fwivs")
expand_mode = 3

[node name="Art" type="TextureRect" parent="Front"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 1
anchors_preset = -1
offset_left = 21.0
offset_top = 42.0
offset_right = 102.0
offset_bottom = 118.0
expand_mode = 2
stretch_mode = 6

[node name="Name" type="Label" parent="Front"]
custom_minimum_size = Vector2(25, 2)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = 17.0
offset_right = -19.0
offset_bottom = -167.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Description" type="Label" parent="Front"]
layout_mode = 0
offset_left = 23.0
offset_top = 133.0
offset_right = 103.0
offset_bottom = 169.0
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Stats" type="Node2D" parent="Front"]
position = Vector2(-213, -238)

[node name="LevelLabel" type="Label" parent="Front/Stats"]
custom_minimum_size = Vector2(25, 25)
offset_left = 214.0
offset_top = 413.0
offset_right = 239.0
offset_bottom = 438.0
theme = ExtResource("4_wvxi0")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PowerLabel" type="Label" parent="Front/Stats"]
custom_minimum_size = Vector2(25, 25)
offset_left = 312.0
offset_top = 413.0
offset_right = 337.0
offset_bottom = 438.0
theme = ExtResource("4_wvxi0")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HPLabel" type="Label" parent="Front/Stats"]
custom_minimum_size = Vector2(25, 25)
offset_left = 213.0
offset_top = 238.0
offset_right = 238.0
offset_bottom = 263.0
theme = ExtResource("4_wvxi0")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DamageLabel" type="Label" parent="Front/Stats"]
custom_minimum_size = Vector2(25, 25)
offset_left = 311.0
offset_top = 238.0
offset_right = 336.0
offset_bottom = 263.0
theme = ExtResource("4_wvxi0")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FoilLayer" type="Control" parent="Front"]
material = SubResource("ShaderMaterial_nus5u")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Front"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_qg7qv")
expand_mode = 2
stretch_mode = 4

[node name="Back" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(120, 200)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackSprite" type="TextureRect" parent="Back"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_0cprg")
expand_mode = 3

[node name="MotionTiltDriver" type="Control" parent="." node_paths=PackedStringArray("target_control", "foil_layer")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_y838j")
target_control = NodePath("..")
foil_layer = NodePath("../Front/FoilLayer")
